--- a/Challenge5/angular.json
+++ b/Challenge5/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "5f16566b-a93b-4408-b5ce-61b2ee18d57a"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
