--- a/Challenge5/package.json
+++ b/Challenge5/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "calc-js": "^2.0.7",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
