--- a/Challenge7/challenge7/package.json
+++ b/Challenge7/challenge7/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
+    "react-paginate": "^7.1.3",
     "react-scripts": "4.0.3",
     "sass": "^1.39.0",
     "web-vitals": "^1.1.2"
