--- a/Challenge7/challenge7/package.json
+++ b/Challenge7/challenge7/package.json
@@ -1,5 +1,6 @@
 {
   "name": "challenge7",
+  "homepage": "https://radzikoska123.github.io/devfinder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
