--- a/Challenge7/challenge7/package.json
+++ b/Challenge7/challenge7/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@okteto/react-oauth2-login": "0.0.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -14,8 +15,13 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
+    "react-github-login": "^1.0.3",
+    "react-oauth-popup": "^1.0.5",
+    "react-oauth2-login": "^1.0.3",
     "react-paginate": "^7.1.3",
     "react-scripts": "4.0.3",
+    "react-simple-oauth2-login": "^0.5.1",
+    "reactjs-oauth": "^0.2.0",
     "sass": "^1.39.0",
     "web-vitals": "^1.1.2"
   },
