--- a/Challenge4/challenge4/package.json
+++ b/Challenge4/challenge4/package.json
@@ -1,5 +1,6 @@
 {
   "name": "challenge4",
+  "homepage": "https://radzikoska123.github.io/countries",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,24 +20,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
     ]
   },
   "devDependencies": {
