--- a/Challenge7/challenge7/package.json
+++ b/Challenge7/challenge7/package.json
@@ -48,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "mdi-react": "^7.5.0",
+    "react-router-dom": "^5.3.0"
   }
 }
