--- a/Challenge7/challenge7/package.json
+++ b/Challenge7/challenge7/package.json
@@ -22,6 +22,9 @@
     "react-scripts": "4.0.3",
     "react-simple-oauth2-login": "^0.5.1",
     "reactjs-oauth": "^0.2.0",
+    "redux": "^4.1.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.39.0",
     "web-vitals": "^1.1.2"
   },
