--- a/Challenge7/challenge7/package.json
+++ b/Challenge7/challenge7/package.json
@@ -19,6 +19,7 @@
     "react-oauth-popup": "^1.0.5",
     "react-oauth2-login": "^1.0.3",
     "react-paginate": "^7.1.3",
+    "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
     "react-simple-oauth2-login": "^0.5.1",
     "reactjs-oauth": "^0.2.0",
