--- a/Challenge7/challenge7/package.json
+++ b/Challenge7/challenge7/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@okteto/react-oauth2-login": "0.0.7",
+    "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
